objects/CRMforNonProfit__Darujme_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Outgoing_Amount__c</fullName>
        <label>Outgoing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Outgoing_At__c</fullName>
        <description>Date when the money was sent to NNO by Darujme.cz</description>
        <label>Outgoing At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Outgoing_Bank_Account__c</fullName>
        <label>Outgoing Bank Account</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Outgoing_VS__c</fullName>
        <label>Outgoing VS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge__c</fullName>
        <label>Pledge</label>
        <referenceTo>CRMforNonProfit__Darujme_Pledge__c</referenceTo>
        <relationshipLabel>Darujme Transactions</relationshipLabel>
        <relationshipName>Darujme_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Presentable_Code__c</fullName>
        <label>Presentable Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Received_At2__c</fullName>
        <label>Received At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Received_At__c</fullName>
        <label>Received At</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sent_Amount__c</fullName>
        <label>Sent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>pending_confirmation</fullName>
                </value>
                <value>
                    <fullName>pending_update</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>success_money_on_account</fullName>
                </value>
                <value>
                    <fullName>sent_to_organization</fullName>
                </value>
                <value>
                    <fullName>failure</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
                <value>
                    <fullName>refund</fullName>
                </value>
                <value>
                    <fullName>timeout</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
                <value>
                    <fullName>canceled</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred</label>
        <type>Checkbox</type>
    </fields>
    <label>Darujme Transaction</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Pledge__c</columns>
        <columns>CRMforNonProfit__Received_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRMforNonProfit__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>